improve styles, add header, fix display overflow bug

--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,29 @@
 :root{
-    --black-color:rgb(29, 27, 27);
-    --main-color:rgb(163, 210, 216);
+    --black-color:rgb(43, 39, 39);
+    --main-color:rgb(182, 182, 182);
 }
 
 body{
     margin:0;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background:#afc3d4;
+    background:#d1d1d1;
+    color:var(--black-color);
 }
-
+*{
+    box-sizing: border-box;
+}
 
 .container{
     width:60%;
     margin:auto;
-}
-header{
     text-align:center;
-    padding:2em;
+}
+/*header{
+    text-align:center;
+    padding:0em;
     background:var(--main-color);
     margin:auto;
-}
+}*/
 header h1{
     margin:0;
     color:var(--black-color);
@@ -33,23 +37,29 @@ header h1{
     max-width: 370px;
     flex-direction:column;
     align-items:center;
-    margin:8em auto;
-    box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.5);
+    margin:3em auto;
+    box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.4);
+    border-radius:0px;
 }
 #display{
     color:#f4f4f4;
     font-size:35px;
     width:100%;
+    min-height:4.2em;
     display:flex;
     justify-content: flex-end;
 }
 #display-content{
     padding:50px;
+    overflow-wrap:break-word;
+    width:100%;
+    height:100%;
+    text-align:left;
 }
-#display-content::before{
+/*#display-content::before{
     content: '|';
     color:var(--black-color);
-}
+}*/
 #calc-btns{
     display:flex;
     width:100%;
@@ -65,8 +75,8 @@ header h1{
     width:30%;
 }
 .calc-btn{
-    padding:2.2em .2em;
-    width:33.3333%;
+    padding:2.2em .1em;
+    flex:1 1 33.3333%;
     border:0;
     font-size:17px;
     transition-property: opacity;
@@ -80,9 +90,9 @@ header h1{
     outline:0;
 }
 #sidebar .calc-btn{
-    width:100%;
+    flex:1 1 100%;
 }
 #zero-btn, #clear-btn{
-    width:66.66%;
+    flex:1 1 66.66%;
     text-align:center;
 }
